--- a/pom.xml
+++ b/pom.xml
@@ -5,25 +5,74 @@
     <artifactId>mmilowicki-lab2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version>
+            <scope>compile</scope>
+        </dependency>
+            
+        <dependency>
+                <groupId>org.hibernate.validator</groupId>   
+                <artifactId>hibernate-validator</artifactId>  
+                <version>6.2.4.Final</version> 
+        </dependency>   
+
+
+        <dependency>
+                <groupId>org.glassfish</groupId> 
+                <artifactId>jakarta.el</artifactId> 
+                <version>3.0.4</version> 
+        </dependency>
+
+    
+        <dependency>
+                <groupId>org.hibernate.validator</groupId>
+                <artifactId>hibernate-validator-cdi</artifactId>
+                <version>6.2.4.Final</version> 
+        </dependency>        
+                
+   
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <exec.mainClass>edu.iit.sat.itmd4515.mmilowicki.MmilowickiLab2</exec.mainClass>
     </properties>
-</project>
+    
+    <build>
 
-<build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.2</version>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <version>2.22.2</version>
-        </plugin>
-    </plugins>
-</build>
+        <plugins>
+
+            <plugin>
+
+                <groupId>org.apache.maven.plugins</groupId> 
+                <artifactId>maven-surefire-plugin</artifactId> 
+                <version>2.22.2</version>
+
+            </plugin>
+
+            <plugin>
+
+                <groupId>org.apache.maven.plugins</groupId> 
+                <artifactId>maven-failsafe-plugin</artifactId> 
+                <version>2.22.2</version>
+
+            </plugin>
+
+        </plugins>
+
+    </build>
+
+</project>
